--- a/src/assignment5/DisplayWorldFX.fxml
+++ b/src/assignment5/DisplayWorldFX.fxml
@@ -7,12 +7,12 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="497.0" prefWidth="697.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="borderPaneController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="497.0" prefWidth="697.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <center>
-      <Canvas height="200.0" width="200.0" BorderPane.alignment="CENTER" />
+      <Canvas fx:id="canvasController" height="200.0" width="200.0" BorderPane.alignment="CENTER" />
    </center>
    <left>
-      <GridPane gridLinesVisible="true" prefHeight="397.0" prefWidth="308.0" BorderPane.alignment="CENTER">
+      <GridPane fx:id="gridPaneController" gridLinesVisible="true" prefHeight="397.0" prefWidth="308.0" BorderPane.alignment="CENTER">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="98.0" minWidth="10.0" prefWidth="18.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="194.0" minWidth="10.0" prefWidth="124.0" />
@@ -28,27 +28,27 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button mnemonicParsing="false" text="Step" GridPane.columnIndex="1" />
-            <Button mnemonicParsing="false" text="Quit" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-            <TextField promptText="enter number of steps" GridPane.columnIndex="2" />
-            <TextField promptText="enter seed number" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <Button mnemonicParsing="false" text="Set Seed" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Button mnemonicParsing="false" text="Make New Critter " GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField promptText="enter number of critters" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-            <Button mnemonicParsing="false" text="Start Animation" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <Button mnemonicParsing="false" text="Stop Animation" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-            <ChoiceBox prefWidth="150.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-            <Slider showTickLabels="true" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+            <Button fx:id="stepButtonController" mnemonicParsing="false" text="Step" GridPane.columnIndex="1" />
+            <Button fx:id="quitButtonController" mnemonicParsing="false" text="Quit" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <TextField fx:id="stepsTextController" promptText="enter number of steps" GridPane.columnIndex="2" />
+            <TextField fx:id="seedTextController" promptText="enter seed number" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <Button fx:id="seedButtonController" mnemonicParsing="false" text="Set Seed" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Button fx:id="makeButtonController" mnemonicParsing="false" text="Make New Critter " GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="makeTextController" promptText="enter number of critters" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+            <Button fx:id="startButtonController" mnemonicParsing="false" text="Start Animation" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <Button fx:id="stopButtonController" mnemonicParsing="false" text="Stop Animation" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <ChoiceBox fx:id="makeChoiceController" prefWidth="150.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <Slider fx:id="animationSliderController" showTickLabels="true" GridPane.columnIndex="2" GridPane.rowIndex="4" />
          </children>
       </GridPane>
    </left>
    <bottom>
-      <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <HBox fx:id="hBoxController" prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <Label text="Label" />
-            <Label text="Label" />
-            <Label text="Label" />
-            <Label text="Label" />
+            <Label fx:id="statsLabel1Controller" text="Label" />
+            <Label fx:id="statsLabel2Controller" text="Label" />
+            <Label fx:id="statsLabel3Controller" text="Label" />
+            <Label fx:id="statsLabel4Controller" text="Label" />
          </children></HBox>
    </bottom>
 </BorderPane>
