--- a/bin/assignment5/DisplayWorldFX.fxml
+++ b/bin/assignment5/DisplayWorldFX.fxml
@@ -12,7 +12,7 @@
       <Canvas fx:id="canvasController" height="200.0" width="200.0" BorderPane.alignment="CENTER" />
    </center>
    <left>
-      <GridPane fx:id="gridPaneController" gridLinesVisible="true" prefHeight="397.0" prefWidth="308.0" BorderPane.alignment="CENTER">
+      <GridPane fx:id="gridPaneController" prefHeight="397.0" prefWidth="318.0" BorderPane.alignment="CENTER">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="98.0" minWidth="10.0" prefWidth="18.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="194.0" minWidth="10.0" prefWidth="124.0" />
@@ -26,10 +26,11 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Button fx:id="stepButtonController" mnemonicParsing="false" text="Step" GridPane.columnIndex="1" />
-            <Button fx:id="quitButtonController" mnemonicParsing="false" text="Quit" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <Button fx:id="quitButtonController" mnemonicParsing="false" text="Quit" GridPane.columnIndex="1" GridPane.rowIndex="7" />
             <TextField fx:id="stepsTextController" promptText="enter number of steps" GridPane.columnIndex="2" />
             <TextField fx:id="seedTextController" promptText="enter seed number" GridPane.columnIndex="2" GridPane.rowIndex="1" />
             <Button fx:id="seedButtonController" mnemonicParsing="false" text="Set Seed" GridPane.columnIndex="1" GridPane.rowIndex="1" />
@@ -37,18 +38,33 @@
             <TextField fx:id="makeTextController" promptText="enter number of critters" GridPane.columnIndex="2" GridPane.rowIndex="3" />
             <Button fx:id="startButtonController" mnemonicParsing="false" text="Start Animation" GridPane.columnIndex="1" GridPane.rowIndex="4" />
             <Button fx:id="stopButtonController" mnemonicParsing="false" text="Stop Animation" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-            <ChoiceBox fx:id="makeChoiceController" prefWidth="150.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
             <Slider fx:id="animationSliderController" showTickLabels="true" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+            <TextField fx:id="makeChoiceController" promptText="enter class of critter" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <Button fx:id="statsButtonController" mnemonicParsing="false" text="Run Stats" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <TextField fx:id="statsTextController" promptText="enter critter type" GridPane.columnIndex="2" GridPane.rowIndex="6" />
          </children>
       </GridPane>
    </left>
    <bottom>
-      <HBox fx:id="hBoxController" prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <VBox prefHeight="84.0" prefWidth="697.0" BorderPane.alignment="CENTER">
          <children>
-            <Label fx:id="statsLabel1Controller" text="Label" />
-            <Label fx:id="statsLabel2Controller" text="Label" />
-            <Label fx:id="statsLabel3Controller" text="Label" />
-            <Label fx:id="statsLabel4Controller" text="Label" />
-         </children></HBox>
+            <HBox prefHeight="60.0" prefWidth="697.0">
+               <children>
+                  <Label text="The total number of " />
+                  <Label fx:id="statsCritterLabelController" text="Label" />
+                  <Label text=" critters is " />
+                  <Label fx:id="statsNumberLabelController" text="Label" />
+               </children>
+            </HBox>
+            <HBox prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Label text="Label" />
+                  <Label text="Label" />
+                  <Label text="Label" />
+                  <Label text="Label" />
+               </children>
+            </HBox>
+         </children>
+      </VBox>
    </bottom>
 </BorderPane>
