--- a/src/assignment5/DisplayWorldFX.fxml
+++ b/src/assignment5/DisplayWorldFX.fxml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.canvas.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.canvas.Canvas?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<BorderPane fx:id="borderPaneController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="497.0" prefWidth="697.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="borderPaneController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="497.0" prefWidth="697.0" xmlns="http://javafx.com/javafx/8.0.76-ea" xmlns:fx="http://javafx.com/fxml/1">
    <center>
-      <Canvas fx:id="canvasController" height="900.0" width="900.0" BorderPane.alignment="CENTER" />
+      <Canvas fx:id="canvasController" height="800.0" layoutX="318.0" width="800.0" BorderPane.alignment="TOP_LEFT" />
    </center>
    <left>
       <GridPane fx:id="gridPaneController" prefHeight="397.0" prefWidth="318.0" BorderPane.alignment="CENTER">
@@ -46,6 +49,6 @@
       </GridPane>
    </left>
    <bottom>
-      <TextArea fx:id="statsTextAreaController" prefHeight="129.0" prefWidth="697.0" BorderPane.alignment="CENTER" />
+      <TextArea fx:id="statsTextAreaController" prefHeight="100.0" prefWidth="697.0" BorderPane.alignment="CENTER" />
    </bottom>
 </BorderPane>
