--- a/bin/assignment5/DisplayWorldFX.fxml
+++ b/bin/assignment5/DisplayWorldFX.fxml
@@ -1,22 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.canvas.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.canvas.Canvas?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
 <BorderPane fx:id="borderPaneController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="497.0" prefWidth="697.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <center>
-      <Canvas fx:id="canvasController" height="900.0" width="900.0" BorderPane.alignment="CENTER" />
+      <Canvas fx:id="canvasController" height="560.0" layoutX="318.0" width="892.0" />
    </center>
    <left>
-      <GridPane fx:id="gridPaneController" prefHeight="397.0" prefWidth="318.0" BorderPane.alignment="CENTER">
+      <GridPane fx:id="gridPaneController" prefHeight="412.0" prefWidth="316.0" BorderPane.alignment="CENTER">
         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="98.0" minWidth="10.0" prefWidth="18.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="194.0" minWidth="10.0" prefWidth="124.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="186.0" minWidth="10.0" prefWidth="165.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="98.0" minWidth="10.0" prefWidth="14.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="194.0" minWidth="10.0" prefWidth="119.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="186.0" minWidth="10.0" prefWidth="184.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -46,6 +53,6 @@
       </GridPane>
    </left>
    <bottom>
-      <TextArea fx:id="statsTextAreaController" prefHeight="129.0" prefWidth="697.0" BorderPane.alignment="CENTER" />
+      <TextArea fx:id="statsTextAreaController" prefHeight="85.0" prefWidth="409.0" BorderPane.alignment="CENTER" />
    </bottom>
 </BorderPane>
