--- a/bin/assignment5/DisplayWorldFX.fxml
+++ b/bin/assignment5/DisplayWorldFX.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.effect.*?>
 <?import java.lang.*?>
 <?import javafx.scene.canvas.*?>
 <?import javafx.scene.control.*?>
@@ -19,11 +20,12 @@
       <Canvas fx:id="canvasController" height="560.0" layoutX="318.0" width="892.0" />
    </center>
    <left>
-      <GridPane fx:id="gridPaneController" prefHeight="412.0" prefWidth="316.0" BorderPane.alignment="CENTER">
+      <GridPane fx:id="gridPaneController" prefHeight="412.0" prefWidth="329.0" BorderPane.alignment="CENTER">
         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="98.0" minWidth="10.0" prefWidth="14.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="194.0" minWidth="10.0" prefWidth="119.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="186.0" minWidth="10.0" prefWidth="184.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="98.0" minWidth="10.0" prefWidth="20.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="194.0" minWidth="10.0" prefWidth="114.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="194.0" minWidth="8.0" prefWidth="23.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="186.0" minWidth="10.0" prefWidth="163.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -38,18 +40,21 @@
          <children>
             <Button fx:id="stepButtonController" mnemonicParsing="false" onAction="#stepButtonEvent" text="Step" GridPane.columnIndex="1" />
             <Button fx:id="quitButtonController" mnemonicParsing="false" onAction="#quitButtonController" text="Quit" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-            <TextField fx:id="stepsTextController" promptText="enter number of steps" GridPane.columnIndex="2" />
-            <TextField fx:id="seedTextController" promptText="enter seed number" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <TextField fx:id="stepsTextController" promptText="enter number of steps" GridPane.columnIndex="3" />
+            <TextField fx:id="seedTextController" promptText="enter seed number" GridPane.columnIndex="3" GridPane.rowIndex="1" />
             <Button fx:id="seedButtonController" mnemonicParsing="false" onAction="#seedButtonEvent" text="Set Seed" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <Button fx:id="makeButtonController" mnemonicParsing="false" onAction="#makeButtonEvent" text="Make New Critter " GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField fx:id="makeTextController" promptText="enter number of critters" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-            <Button fx:id="startButtonController" mnemonicParsing="false" onAction="#startButtonEvent" text="Start Animation" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <Button fx:id="stopButtonController" mnemonicParsing="false" onAction="#stopButtonEvent" text="Stop Animation" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-            <Slider fx:id="animationSliderController" showTickLabels="true" GridPane.columnIndex="2" GridPane.rowIndex="4" />
-            <TextField fx:id="makeChoiceController" promptText="enter class of critter" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-            <Button fx:id="statsButtonController" mnemonicParsing="false" onAction="#statsButtonEvent" text="Run Stats" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-            <TextField fx:id="statsTextController" promptText="enter critter type" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+            <TextField fx:id="makeTextController" promptText="enter number of critters" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+            <Button fx:id="startButtonController" mnemonicParsing="false" onAction="#startButtonEvent" text="Start Animation" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <Button fx:id="stopButtonController" mnemonicParsing="false" onAction="#stopButtonEvent" text="Stop Animation" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <Slider fx:id="animationSliderController" showTickLabels="true" GridPane.columnIndex="3" GridPane.rowIndex="5" />
+            <TextField fx:id="makeChoiceController" promptText="enter class of critter" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+            <Button fx:id="statsButtonController" mnemonicParsing="false" onAction="#statsButtonEvent" text="Run Stats" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <TextField fx:id="statsTextController" promptText="enter critter type" GridPane.columnIndex="3" GridPane.rowIndex="4" />
          </children>
+         <effect>
+            <DropShadow />
+         </effect>
       </GridPane>
    </left>
    <bottom>
